feat(affassion): implement magazine-style prototype and configure automated deployment

--- a/.firebaserc
+++ b/.firebaserc
@@ -10,6 +10,9 @@
         ],
         "clock": [
           "usanari-clock"
+        ],
+        "affassion": [
+          "usanari-affassion"
         ]
       }
     }
