chore(antigravity): migrate skills to global and add memory workflow

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ temp/
 firebase-debug.log*
 firestore-debug.log*
 ui-debug.log*
+
+# Auto-generated & Local
+transcript.txt
+.venv/
+obsidian_vault
+
